# okeanos

./: Makefile  benchmark.c  benchmark.cpp  pull  sync
mpi-lab-02-e/: floyd-warshall-par.cpp  floyd-warshall-seq.cpp  graph-utils-par.cpp  graph-utils-seq.cpp  plot.ipynb  results  run-floyd-warshall
mpi-lab-03-e/: CMakeLists.txt  laplace-common.cpp  laplace-common.h  laplace-par.cpp
